feat: Event -> EventModel
