# doc/api.yaml
@@ -432,7 +432,7 @@ paths:
                   data:
                     type: array
                     items:
-                      $ref: '#/components/schemas/Event'
+                      $ref: '#/components/schemas/EventModel'
   /events/{event_id}:
     parameters:
       - name: event_id
@@ -462,14 +462,14 @@ paths:
         content:
           "application/json":
             schema:
-              $ref: "#/components/schemas/Event"
+              $ref: "#/components/schemas/EventModel"
       responses:
         '200':
           description: crupdated event
           content:
             'application/json':
               schema:
-                $ref: '#/components/schemas/Event'
+                $ref: '#/components/schemas/EventModel'
 components:
   securitySchemes:
     bearerAuth:
@@ -696,7 +696,7 @@ components:
           type: string
         meeting_fee:
           type: number
-    Event:
+    EventModel:
       type: object
       allOf:
         - $ref: "#/components/schemas/CrupdateEvent"
